# LdP_Battleship

./: .gitignore  CMakeLists.txt  Coordinates.cpp  Coordinates.h  Leggimi.txt  README.md
src/: Battle_Ship.cpp  Battle_Ship.h  Board.cpp  Board.h  Com_Player.cpp  Com_Player.h  Coordinates.cpp  Coordinates.h  Game_Master.cpp  Game_Master.h  Human_Player.cpp  Human_Player.h  OLDmain.cpp  Player.cpp  Player.h  Replay.cpp  Replay.h  Ship.h  Submarine.cpp  Submarine.h  Support_Ship.cpp  Support_Ship.h  main.cpp  writeLog.cpp  writeLog.h
tst/: test.cpp  test_Com_Player.cpp  test_Human_Player.cpp  test_board.cpp  test_coordinates.cpp  test_on_Game_Master_CC.cpp  test_on_vectors.cpp
